--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -17,8 +17,8 @@ auth --enableshadow --passalgo=sha512 --kickstart
 firstboot --disabled
 eula --agreed
 services --enabled=NetworkManager,sshd
-reboot
 user --name=vagrant --plaintext --password vagrant --groups=vagrant,wheel
+reboot
 
 %packages --ignoremissing --excludedocs
 @Base
@@ -71,6 +71,11 @@ yum update -y
 
 # update root certs
 wget -O/etc/pki/tls/certs/ca-bundle.crt http://curl.haxx.se/ca/cacert.pem
+
+# Add vagrant user (user directive isn't working for some reason).
+/usr/sbin/useradd vagrant
+/usr/bin/passwd -d vagrant
+/usr/sbin/usermod -a -G wheel vagrant
 
 # sudo
 yum install -y sudo
