--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -17,7 +17,7 @@ auth --enableshadow --passalgo=sha512 --kickstart
 firstboot --disabled
 eula --agreed
 services --enabled=NetworkManager,sshd
-user --name=vagrant --plaintext --password vagrant --groups=vagrant,wheel
+#user --name=vagrant --plaintext --password vagrant --groups=wheel
 reboot
 
 %packages --ignoremissing --excludedocs
@@ -73,9 +73,9 @@ yum update -y
 wget -O/etc/pki/tls/certs/ca-bundle.crt http://curl.haxx.se/ca/cacert.pem
 
 # Add vagrant user (user directive isn't working for some reason).
-/usr/sbin/useradd vagrant
-/usr/bin/passwd -d vagrant
-/usr/sbin/usermod -a -G wheel vagrant
+useradd vagrant
+echo "vagrant" | passwd vagrant --stdin
+usermod -a -G wheel vagrant
 
 # sudo
 yum install -y sudo
